resolve body overflow issue

--- a/src/Styles/reset.scss
+++ b/src/Styles/reset.scss
@@ -43,16 +43,17 @@ html {
 body {
   margin: 0;
 
-  // width: 100vw;
-
-  overflow-y: scroll;
-
   line-height: 1.5;
   text-rendering: optimizeSpeed;
   text-size-adjust: 100%;
 
   scroll-behavior: smooth;
   overscroll-behavior-y: none;
+  overflow: scroll;
+
+  &.body-gallery {
+    overflow: hidden;
+  }
 }
 
 h1,
